samples/_failures_safe/1761791396_3cb47c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e28b863.c: In function ‘tokenize’:
./samples/SAFE/__tmp_3e28b863.c:161:44: error: missing terminating ' character
  161 |             tokens[token_count].value[1] = '\0
      |                                            ^~~
./samples/SAFE/__tmp_3e28b863.c:161:13: error: expected expression at end of input
  161 |             tokens[token_count].value[1] = '\0
      |             ^~~~~~
./samples/SAFE/__tmp_3e28b863.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3e28b863.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3e28b863.c:161:13: error: expected declaration or statement at end of input
